split style from html

--- a/index.html
+++ b/index.html
@@ -1,94 +1,185 @@
-<br>
-<img src="images/logo.png" alt="logo"><br>
-<br>
-<h1>The MATHUSLA Experiment</h1><br>
-MATHUSLA (Massive Timing Hodoscope for Ultra Stable neutraL pArticles) is a proposed detector at CERN with the aim of going online with the HL-LHC upgrade to the Large Hadron Collider in ~2025.<br>
-<br>
-Long-lived particles are a common feature in many theories of particle physics that extend the Standard Model and could solve mysteries like why gravity is so weak or the nature of dark matter.<br>
-<br>
-MATHUSLA is a large-scale, relatively simple detector for the HL-LHC that can detect neutral long-lived particles produced in the 14 TeV pp collisions. Its location on the surface\ shields it from backgrounds that constrain the ability of the MAIN detectors like ATLAS and CMS to look for many of these kinds of particles. The large size of MATHUSLA would also allow it to act as a cosmic ray telescope.<br>
-<br>
-<img src="images/geometry.png" alt="geometry"><br>
-<br>
-<br>
-<h2>In the Media</h2>
-<ul>
-  <li>
-    <a href="https://www.newscientist.com/article/mg24032061-600-particles-crossing-to-our-world-could-open-portal-to-dark-matter-realm/">"Into the Dark" (New Scientist, December 2018)</a>: popular science article about Hidden Sectors and new experimental proposals looking for them, including MATHUSLA. (paywall, <a href="http://tinyurl.com/y8kn36la">PDF link</a>)
-  </li>
-  <li>
-    <a href="https://www.livescience.com/62633-lhc-stray-particles-mathusla-detection.html">"Nuclear Detectives Hunt Invisible Particles That Escaped the World's Largest Atom Smasher" (Live Science, 22 May 2018)</a>: popular news article about the MATHUSLA detector proposal.
-  </li>
-  <li>
-    <a href="https://www.quantamagazine.org/how-the-hidden-higgs-could-reveal-our-universes-dark-sector-20170926/">Quanta Magazine, September 2017</a>: In-depth popular science article about hidden sectors, long-lived particles and our MATHUSLA detector proposal. Also picked up by <a href="https://www.wired.com/story/hidden-higgs-dark-sector/">Wired Magazine</a>.
-  </li>
-  <li>
-    <a href="https://physicstoday.scitation.org/doi/10.1063/PT.3.3594">Hidden worlds of fundamental particles (June 2017)</a>: General physics audience article in Physics Today (Raman Sundrum, David Curtin)
-  </li>
-  <li>
-    <a href="http://jqi.umd.edu/news/podcast/long-live-mathusla">UMD JQI Podcast, July 2017</a>: 11 minute podcast where David Curtin is interviewed about the MATHUSLA proposal
-  </li>
-</ul>
-<p><br></p>
-<h2>Selected Publications</h2>&lt;\ ul&gt;
-<ul>
-  <li>
-    <a href="https://arxiv.org/abs/1606.06298">New Detectors to Explore the Lifetime Frontier (Chou, Curtin, Lubatti 2016)</a><br>
-    This is the first paper where the MATHUSLA idea was proposed.
-  </li>\
-  <li>
-    <a href="https://arxiv.org/abs/1806.07396">Long-Lived Particles at the Energy Frontier: The MATHUSLA Physics Case (2018)</a><br>
-    This is a large white paper with ~100 authors explaining the physics case for long-lived particle searches at the LHC and the motivation for building MATHUSLA.
-  </li>
-  <li>
-    <a href="https://arxiv.org/abs/1811.00927">A Letter of Intent for MATHUSLA: a dedicated displaced vertex detector above ATLAS or CMS (2018)<br></a> Presented to the LHC Experimental Council in August 2018.
-  </li>
-  <li>2018 Update to European Strategy for Particle Physics:<br>
-    <a href="https://arxiv.org/abs/1901.04040">MATHUSLA contribution</a>. See also <a href="https://cds.cern.ch/record/2652223">CERN-PBC-REPORT-2018-007</a> for the contribution of the Physics Beyond Colliders working group, which contains a cross-experimental comparison of simplified low-energy LLP models, as well as comments on MATHUSLA?s budget, which we project to lie below 100 MCHF.<br>
-  </li>
-</ul>
-<p><br>
-</p>
-<h2>Recent Talks</h2>
-<ul>
-  <li>
-    <a href="https://indico.cern.ch/event/517784/contributions/2550393/attachments/1462673/2259770/The_Lifetime_Frontier_final.pdf#search=lubatti%20AND%20EventID%3A517784">The lifetime frontier MilleQAN and MATHUSLA</a> (Henry Lubatti, Shanghai LHCP 2017)
-  </li>
-  <li>
-    <a href="https://cernbox.cern.ch/index.php/s/x2Ab9xJa2hK6PXO#pdfviewer">MATHUSLA - Extending the LHC LLP horizon with large but simple apparatus</a> (Erez Etzion, RPC 2018)
-  </li>
-  <li>
-    <a href="https://drive.google.com/file/d/1Y_8l8ZVL0_0R-t6KxzcNo-4bVS5meJJ0/view?usp=sharing">Particle Physics at the Lifetime Frontier</a> (Colloquium, David Curtin, 2018)
-  </li>
-</ul>
-<p><br></p>
-<h2>Frequently Asked Questions</h2><a href="https://twiki.cern.ch/twiki/bin/view/MATHUSLA/MATHUSLAFAQ">FAQs on the twiki</a> (for particle physicists)<br>
-<br>
-<br>
-<h2>Collaboration</h2>The collaboration includes several dozen physicists from about a dozen different<br>
-countries all over the world. For a snap shot of members, see the author list of the <a href="https://arxiv.org/abs/1811.00927">Letter of Intent</a>.<br>
-<br>
-MATHUSLA Spokesperson: Henry Lubatti (University of Washington)<br>
-<br>
-Collaboration contact email: <a href="mailto:mathusla.experiment@cern.ch">mathusla.experiment@cern.ch</a><br>
-<br>
-The collaboration is growing. Contact us if you are a high energy physicist and are interested in joining. \<br>
-<br>
-<table>
-  <tbody>
-    <tr>
-      <td>
-        <a href="images/IMG_2719.jpg"><img src="images/IMG_2719_preview.jpg" alt="IMG_2719_preview"></a>
-      </td>
-    </tr>
-    <tr>
-      <td>Part of the collaboration got together at the first official collaboration meeting in August 2018 at the Simons Center for Geometry and Physics in Stony Brook, NY</td>
-    </tr>
-  </tbody>
-</table><br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+<!DOCTYPE>
+<html>
+   <head>
+      <meta http-equiv="content-type" content="application/xhtml+xml; charset=utf-8" />
+      <title>MATHUSLA</title>
+      <link rel="stylesheet" href="styles/main.css">
+   </head>
+   <body class="oneColumn">
+      <div id="container">
+         <div id="header">
+            <div style="text-align: center;"><br/>
+               <br/>
+               <img src="images/logo.png" alt="" title="mathusla logo" style="width: 182px; height: 40px;" /><br/>
+               <br/>
+            </div>
+            <h1 style="text-align: center;">The MATHUSLA Experiment</h1>
+            <br/>
+            MATHUSLA (Massive Timing Hodoscope for Ultra Stable neutraL pArticles)
+            is a proposed detector at CERN with the aim of going online with the
+            HL-LHC upgrade to the Large Hadron Collider in ~2025. <br/>
+            <br/>
+            Long-lived particles are a common feature in many theories of particle
+            physics that extend the Standard Model and could solve mysteries like
+            why gravity is so weak or the nature of dark matter. <br/>
+            <br/>
+            MATHUSLA is a large-scale, relatively simple detector for the HL-LHC
+            that can detect neutral long-lived particles produced in the 14 TeV pp
+            collisions. Its location on the surface shields it from backgrounds that
+            constrain the ability of the MAIN detectors like ATLAS and CMS to look
+            for many of these kinds of particles. The large size of MATHUSLA would
+            also allow it to act as a cosmic ray telescope. <br/>
+            <br/>
+            <div style="text-align: center;">
+               <img src="images/geometry.png" alt="geometry"
+                  style="width: 477px; height: 231px;" /><br/>
+               <br/>
+               <div style="text-align: left;">
+                  <br/>
+                  <h2>In the Media</h2>
+                  <ul>
+                     <li style="box-sizing: inherit; margin: 0px; padding: 0px; font-size: inherit;"><a
+                        style="box-sizing: inherit; background-color: transparent; line-height: inherit; color: rgb(0, 139, 176); text-decoration: none; cursor: pointer;"
+                        href="https://www.newscientist.com/article/mg24032061-600-particles-crossing-to-our-world-could-open-portal-to-dark-matter-realm/">"Into
+                        the Dark" (New Scientist, December 2018)</a>: popular science
+                        article about Hidden Sectors and new experimental proposals
+                        looking for them, including MATHUSLA. (paywall,<span> </span><a
+                           style="box-sizing: inherit; background-color: transparent; line-height: inherit; color: rgb(0, 139, 176); text-decoration: none; cursor: pointer;"
+                           href="http://tinyurl.com/y8kn36la">PDF
+                        link</a>)<br/>
+                     </li>
+                     <li style="box-sizing: inherit; margin: 0px; padding: 0px; font-size: inherit;"><a
+                        style="box-sizing: inherit; background-color: transparent; line-height: inherit; color: rgb(0, 139, 176); text-decoration: none; cursor: pointer;"
+                        href="https://www.livescience.com/62633-lhc-stray-particles-mathusla-detection.html">"Nuclear
+                        Detectives Hunt Invisible Particles That Escaped the World's
+                        Largest Atom Smasher" (Live Science, 22 May 2018)</a>: popular
+                        news article about the MATHUSLA detector proposal.<br/>
+                     </li>
+                     <li style="box-sizing: inherit; margin: 0px; padding: 0px; font-size: inherit;"><a
+                        style="box-sizing: inherit; background-color: transparent; line-height: inherit; color: rgb(0, 139, 176); text-decoration: none; cursor: pointer;"
+                        href="https://www.quantamagazine.org/how-the-hidden-higgs-could-reveal-our-universes-dark-sector-20170926/">Quanta
+                        Magazine, September 2017</a>: In-depth popular science article
+                        about hidden sectors, long-lived particles and our MATHUSLA
+                        detector proposal. Also picked up by<span> </span><a style="box-sizing: inherit; background-color: transparent; line-height: inherit; color: rgb(0, 139, 176); text-decoration: none; cursor: pointer;"
+                           href="https://www.wired.com/story/hidden-higgs-dark-sector/">Wired
+                        Magazine</a><br/>
+                     </li>
+                     <li style="box-sizing: inherit; margin: 0px; padding: 0px; font-size: inherit;"><a
+                        style="box-sizing: inherit; background-color: transparent; line-height: inherit; color: rgb(0, 139, 176); text-decoration: none; cursor: pointer;"
+                        href="https://physicstoday.scitation.org/doi/10.1063/PT.3.3594">Hidden
+                        worlds of fundamental particles (June 2017)</a>: General
+                        physics audience article in Physics Today (Raman Sundrum, David
+                        Curtin)<br/>
+                     </li>
+                     <li style="box-sizing: inherit; margin: 0px; padding: 0px; font-size: inherit;"><a
+                        style="box-sizing: inherit; background-color: transparent; line-height: inherit; color: rgb(0, 139, 176); text-decoration: none; cursor: pointer;"
+                        href="http://jqi.umd.edu/news/podcast/long-live-mathusla">UMD
+                        JQI Podcast, July 2017</a>: 11 minute podcast where David
+                        Curtin is interviewed about the MATHUSLA proposal
+                     </li>
+                  </ul>
+                  <p><br/>
+                  </p>
+                  <h2>Selected Publications</h2>
+                  <ul>
+                     <li><a href="https://arxiv.org/abs/1606.06298">New Detectors to
+                        Explore the Lifetime Frontier (Chou, Curtin, Lubatti 2016)</a><br/>
+                        This is the first paper where the MATHUSLA idea was proposed.
+                     </li>
+                     <li><a href="https://arxiv.org/abs/1806.07396">Long-Lived
+                        Particles at the Energy Frontier: The MATHUSLA Physics Case
+                        (2018)</a><br/>
+                        This is a large white paper with ~100 authors explaining the
+                        physics case for long-lived particle searches at the LHC and the
+                        motivation for building MATHUSLA.
+                     </li>
+                     <li><a href="https://arxiv.org/abs/1811.00927">A Letter of Intent
+                        for MATHUSLA: a dedicated displaced vertex detector above
+                        ATLAS or CMS (2018)<br/>
+                        </a>Presented to the LHC Experimental Council in August 2018.
+                     </li>
+                  </ul>
+                  <p><br/>
+                  </p>
+               </div>
+            </div>
+            <h2>Recent Talks</h2>
+            <ul>
+               <li><a href="https://indico.cern.ch/event/517784/contributions/2550393/attachments/1462673/2259770/The_Lifetime_Frontier_final.pdf#search=lubatti%20AND%20EventID%3A517784">The
+                  lifetime frontier MilleQAN and MATHUSLA</a> (Henry Lubatti, Shanghai
+                  LHCP 2017)
+               </li>
+               <li><a href="https://cernbox.cern.ch/index.php/s/x2Ab9xJa2hK6PXO#pdfviewer">MATHUSLA
+                  - Extending the LHC LLP horizon with large but simple apparatus </a>(Erez
+                  Etzion,
+               </li>
+               <li><a href="https://drive.google.com/file/d/1Y_8l8ZVL0_0R-t6KxzcNo-4bVS5meJJ0/view?usp=sharing">Particle
+                  Physics at the Lifetime Frontier</a> (Colloquium, David Curtin,
+                  2018)
+               </li>
+            </ul>
+            <p><br/>
+            </p>
+            <h2>Frequently Asked Questions</h2>
+            <a href="https://twiki.cern.ch/twiki/bin/view/MATHUSLA/MATHUSLAFAQ">FAQs
+            on the twiki</a> (for particle physicists)<br/>
+            <br/>
+            <br/>
+            <h2>Collaboration</h2>
+            The collaboration includes several dozen physicists from about a dozen
+            different <br/>
+            countries all over the world. <br/>
+            <br/>
+            MATHUSLA Spokesperson: Henry Lubatti<br/>
+            <br/>
+            Collaboration contact email: <a href="mailto:mathusla.experiment@cern.ch">mathusla.experiment@cern.ch</a><br/>
+            <br/>
+            <table border="1" style="width: 520px; height: 468px; text-align: left; margin-left: auto; margin-right: auto;">
+               <tbody>
+                  <tr align="center">
+                     <td><img src="images/IMG_2719_preview.jpg"
+                        alt=""
+                        style="width: 508px; height: 378px;"/></td>
+                  </tr>
+                  <tr>
+                     <td>
+                        <div class="oneColFixCtrHdr"><em>Part of the collaboration got
+                           together at the first official collaboration meeting in
+                           August 2018 at the Simons Center for Geometry and Physics in
+                           Stony Brook, NY</em>
+                        </div>
+                     </td>
+                  </tr>
+               </tbody>
+            </table>
+            <div style="text-align: center;"><br/>
+            </div>
+            <br/>
+            <div style="text-align: center;"><br/>
+               <br/>
+            </div>
+            <br/>
+            <br/>
+            <br/>
+            <!-- end #header -->
+         </div>
+         <br/>
+         <div id="footer">
+            <table width="90%" border="0" align="center">
+               <tbody>
+                  <tr>
+                     <td align="left">LEFT<br/>
+                     </td>
+                     <td style="width: 168.433px;">MIDDLE<br/>
+                     </td>
+                     <td align="right" style="width: 192.2px;">RIGHT<br/>
+                     </td>
+                  </tr>
+               </tbody>
+            </table>
+            <!-- end #footer -->
+         </div>
+         <!-- end #container -->
+      </div>
+   </body>
+</html>
